Updating position of overlay to fix cover of viewport on mobile.

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -94,6 +94,7 @@
       width: 250px;
       height: 250px;
       background: url(../img/portrait.jpg);
+      opacity: 1;
       border-radius: 50%;
       border: solid 3px darken($secondary-color, 5);
     }
