--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -47,6 +47,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
+      background: url(../img/portrait-v2.jpeg);
       width: 150px;
       height: 150px;
     }
